# LinuxDevelopment2021

03_Multifile/: Makefile  fun.c  prog.c
03_TerminalProject/: Makefile  Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  gdb_test1  gdb_test2  range.c
06_TracingFencing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  test.sh
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: Makefile.am  buf.h
09_Testing/tests/: Makefile.am  test_grow.c  test_init.c  test_null.c  test_pop.c  test_push.c
10_I18n/: configure.ac
10_I18n/po/: Makefile.am  ru.po
10_I18n/src/: Makefile.am  number.c
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: number.pot  ru.po
11_Documenting/src/: Makefile.am  number.md.in
12_PatchInstall/: configure.ac
12_PatchInstall/po/: Makevars  POTFILES.in  ru.po
12_PatchInstall/src/: Makefile.am  number.c
