AC_PREREQ([2.69])
AC_INIT([esub], [1.0], [])
AC_CONFIG_SRCDIR([esub.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_INIT_AUTOMAKE

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([regcomp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
